update qst6